# skill-gen

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
assets/templates/: api.md  basic.md  browser.md  cli.md  composite.md
scripts/: evolve.py  forge.py  from_url.py  init_skill.py  research.py  validate.py
skill_gen/: __init__.py  cli.py
skill_gen/browser/: session.py  tools.py
skill_gen/core/: generator.py  researcher.py  templates.py  validator.py
skill_gen/utils/: markdown.py
